fixed edit note component margins (gap issue)

--- a/src/components/EditNote/EditNote.module.css
+++ b/src/components/EditNote/EditNote.module.css
@@ -4,19 +4,18 @@
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 5vh;
   background: rgba(0, 0, 0, 0.5);
 }
 
 .form {
-  max-height: 90vh;
-  max-width: 100%;
+  max-height: 100%;
+  width: 576px;
   position: absolute;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
+  top: 50%;
   left: 50%;
   display: flex;
   flex-flow: column nowrap;
-  gap: 1rem;
   padding: 1rem;
   border-radius: 1rem;
   background: white;
@@ -40,7 +39,6 @@
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  gap: 1rem;
   border-top: 1px solid ghostwhite;
 }
 
@@ -97,13 +95,15 @@
   position: relative;
   overflow-y: scroll;
   display: grid;
-  gap: 1rem;
+}
+
+.formMainSector>* {
+  margin-bottom: 1rem;
 }
 
 .imagesSector {
   display: flex;
   flex-flow: column nowrap;
-  gap: 1rem;
 }
 
 .imagesSector img {
@@ -128,13 +128,25 @@
 .tagsModal {
   display: flex;
   flex-flow: column nowrap;
-  gap: 0.4rem;
   position: absolute;
   z-index: 999;
   padding: 1rem;
   background: white;
   box-shadow: 0 0 5px gray;
   border-radius: 0.3rem;
+}
+
+.tagsModal>* {
+  margin-bottom: 0.5rem;
+}
+
+.tagsModal>input {
+  border: 1px solid gray;
+  padding: 0.5rem;
+}
+
+.tagsModal>input:focus {
+  outline: none;
 }
 
 .tagsModal div {
@@ -148,7 +160,7 @@
   list-style: none;
 }
 
-.tasksList>*:not(:last-child) {
+.tasksList>* {
   margin-bottom: 1rem;
 }
 
@@ -172,4 +184,10 @@
 
 .tasksItem>input[data-for="name"]:focus {
   outline: none;
+}
+
+@media screen and (max-width: 576px) {
+  .form {
+    width: 100%;
+  }
 }
